--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,13 +1,19 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  description: MyText
-  image_url: MyString
+  title: MyString1
+  description: MyText1
+  image_url: 7apps.jpg
   price: 9.99
 
 two:
-  title: MyString
+  title: MyString2
   description: MyText
-  image_url: MyString
-  price: 9.99
+  image_url: lorem.jpg
+  price: 3.99
+
+ruby:
+  title: Programming Ruby 1.9
+  description: Texto ruby 2
+  image_url: ruby.jpg
+  price: 49.50
